<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_children"
        android:icon="@drawable/ic_child"
        android:title="@string/children" />
    <item
        android:id="@+id/navigation_sports"
        android:icon="@drawable/ic_sports"
        android:title="@string/sports" />

    <item
        android:id="@+id/navigation_education"
        android:icon="@drawable/ic_education"
        android:title="@string/education" />
    <item
        android:id="@+id/navigation_religious"
        android:icon="@drawable/ic_religious"
        android:title="@string/religious" />

</menu>