<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <View
        android:id="@+id/bottom_view"
        android:layout_width="60dp"
        android:layout_height="4dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bottom_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/enter_your_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/save_btn"
        app:layout_constraintBottom_toBottomOf="@id/save_btn"
        />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:layout_marginEnd="30dp"
        android:background="@android:color/transparent"
        android:text="@string/save"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_view" />


    <Button
        android:id="@+id/cancel_bottom_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/black"
        android:background="@android:color/transparent"
        android:text="@string/cancel"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/save_btn"
        app:layout_constraintTop_toBottomOf="@id/bottom_view" />




    <EditText
        android:id="@+id/bottom_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/name"
        android:theme="@style/TextLabel"
        app:layout_constraintStart_toStartOf="@id/bottom_name_title"
        app:layout_constraintTop_toBottomOf="@id/save_btn"
        />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_edit_text"/>


</androidx.constraintlayout.widget.ConstraintLayout>