<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_up_background"
    tools:context=".signUp.PhoneSignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:orientation="vertical"
                android:paddingTop="120dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/login_logo"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@drawable/logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center_horizontal"
                    android:text="@string/welcome_to_best_tube"
                    android:textColor="@color/gray50"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/lobster_regular"
                    android:gravity="center"
                    android:text="@string/sign_in"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <AutoCompleteTextView
                    android:id="@+id/phone_num"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/text_form_background"
                    android:drawableLeft="@drawable/ic_call"
                    android:drawablePadding="10dp"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:textColor="#fff"
                    android:textColorHint="@color/gray50"
                    android:textSize="16sp" />


                <Button
                    android:id="@+id/verify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_shape"
                    android:drawableRight="@drawable/ic_next"
                    android:fontFamily="@font/cairo_regular"
                    android:paddingStart="15dp"
                    android:paddingEnd="10dp"
                    android:text="@string/verify"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:gravity="center_horizontal"
                    android:text="@string/authentication_description"
                    android:textColor="@color/gray50"
                    android:textSize="15sp" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>