<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/UploadActivity_color"
    app:cardCornerRadius="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_option"
            android:backgroundTint="@color/colorAccen"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="@id/dialog_Title"
            app:layout_constraintBottom_toBottomOf="@id/dialog_Title"/>
        <TextView
            android:id="@+id/dialog_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/cairo_regular"
            android:text="@string/main"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/language"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/cairo_regular"
            android:background="@android:color/transparent"
            android:text="@string/language"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_Title" />

        <View
            android:id="@+id/view1"
            android:layout_height="5dp"
            android:layout_width="match_parent"
            android:background="@drawable/button_shape"
            app:layout_constraintTop_toBottomOf="@id/language"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"/>






        <Button
            android:id="@+id/share_app"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="@font/cairo_regular"
            android:background="@android:color/transparent"
            android:text="@string/share"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view1" />

        <View
            android:id="@+id/view2"
            android:layout_height="5dp"
            android:layout_width="match_parent"
            android:background="@drawable/button_shape"
            app:layout_constraintTop_toBottomOf="@id/share_app"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"/>


        <Button
            android:id="@+id/privacy"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="@font/cairo_regular"
            android:background="@android:color/transparent"
            android:text="@string/help_privacy"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view2" />

        <View
            android:id="@+id/view3"
            android:layout_height="5dp"
            android:layout_width="match_parent"
            android:background="@drawable/button_shape"
            app:layout_constraintTop_toBottomOf="@id/privacy"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"/>

        <TextView
            android:id="@+id/english_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/cairo_regular"
            android:text="@string/version_1_0"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:background="@drawable/back_version"
            android:textColor="@color/black"
           android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view3"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>