<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".intro.IntroActivity">

    <Button
        android:id="@+id/skip_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@android:color/transparent"
        android:drawableRight="@drawable/ic_back"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textSize="17sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/intro_slides"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginBottom="30dp"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@id/next_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/skip_btn" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_shape"
        android:drawableRight="@drawable/ic_next"
        android:paddingRight="5dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/getStart_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/alber_michel"
        android:text="@string/get_started"
        android:textColor="@color/colorPrimaryDark"
        android:textAllCaps="false"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:isScrollContainer="false"
        android:layout_marginLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/next_btn"
        app:layout_constraintHorizontal_bias="0.254"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro_slides"
        app:layout_constraintVertical_bias="1.0"
        app:tabBackground="@drawable/indicator_selector"
        app:tabInlineLabel="false">

    </com.google.android.material.tabs.TabLayout>


</androidx.constraintlayout.widget.ConstraintLayout>